observability/kube-thanos/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: thanos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.microspray.io/oauth2/start?rd=https%3A%2F%2F$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.microspray.io/oauth2/auth
  name: thanos
spec:
  ingressClassName: nginx
  rules:
  - host: thanos.microspray.io
    http:
      paths:
      - backend:
          service:
            name: thanos-query-frontend
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - thanos.microspray.io
    secretName: thanos-certs
